--- a/dailyui/landingpage/index.html
+++ b/dailyui/landingpage/index.html
@@ -9,7 +9,7 @@
         <header>
             <nav class="header">
                 <div><a href="">Gmail</a></div>
-                <div><a href="">Images</a></div>
+                <div><a href="">Photos</a></div>
                 <div><i class="material-icons">view_comfy</i></div>
             </nav>
         </header>
