--- a/dailyui/spotify/index.html
+++ b/dailyui/spotify/index.html
@@ -1,11 +1,23 @@
 <html>
-    <head>
-        <title>Spotify Landing Page</title>
-        <link rel="stylesheet" href="index.css">
-    </head>
-    <body>
-        <div class="column-one">One</div>
-        <div class="column-two">Two</div>
-        <div class="column-three">Three</div>
-    </body>
+  <head>
+    <title>Spotify Landing Page</title>
+    <link rel="stylesheet" href="index.css" />
+    <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css?family=Montserrat"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
+    <div class="column-one">
+      <div><i class="material-icons">home</i>Home</div>
+      <div><i class="material-icons">laptop_mac</i>Browse</div>
+      <div><i class="material-icons">wifi_tethering</i>Radio</div>
+    </div>
+    <div class="column-two">Two</div>
+    <div class="column-three">Three</div>
+  </body>
 </html>
