add sidebar items, add new playlist section, add playbar with styling

--- a/dailyui/spotify/index.html
+++ b/dailyui/spotify/index.html
@@ -7,17 +7,45 @@
       rel="stylesheet"
     />
     <link
-      href="https://fonts.googleapis.com/css?family=Montserrat"
+      href="https://fonts.googleapis.com/css?family=Montserrat:800italic,700,300,600,800,400"
       rel="stylesheet"
     />
   </head>
   <body>
-    <div class="column-one">
-      <div><i class="material-icons">home</i>Home</div>
-      <div><i class="material-icons">laptop_mac</i>Browse</div>
-      <div><i class="material-icons">wifi_tethering</i>Radio</div>
-    </div>
-    <div class="column-two">Two</div>
-    <div class="column-three">Three</div>
+    <main>
+      <div class="column-one">
+        <div class="sidebar-content">
+          <div class="menu"><i class="material-icons">home</i>Home</div>
+          <div class="menu"><i class="material-icons">laptop_mac</i>Browse</div>
+          <div class="menu">
+            <i class="material-icons">wifi_tethering</i>Radio
+          </div>
+
+          <p class="library">YOUR LIBRARY</p>
+          <div class="library-menu">Made For You</div>
+          <div class="library-menu">Recently Played</div>
+          <div class="library-menu">Liked Songs</div>
+          <div class="library-menu">Albums</div>
+          <div class="library-menu">Artists</div>
+          <div class="library-menu">Podcasts</div>
+
+          <p class="playlists">PLAYLISTS</p>
+          <div>Nature Sounds</div>
+          <div>Gold/Hope</div>
+          <div>Reading Music</div>
+          <div>Hymns 2020</div>
+          <div>My Christ</div>
+          <div>Afro Sugar</div>
+        </div>
+        <div class="sticky">
+          <div>
+            <i class="material-icons">add_circle_outline</i>New Playlist
+          </div>
+        </div>
+      </div>
+      <div class="column-two">Two</div>
+      <div class="column-three">Three</div>
+    </main>
+    <footer><div>One</div></footer>
   </body>
 </html>
