add footer and add playing bar

--- a/dailyui/spotify/index.html
+++ b/dailyui/spotify/index.html
@@ -15,7 +15,7 @@
     <main>
       <div class="column-one">
         <div class="sidebar-content">
-          <div class="menu"><i class="material-icons">home</i>Home</div>
+          <div class="menu home"><i class="material-icons">home</i>Home</div>
           <div class="menu"><i class="material-icons">laptop_mac</i>Browse</div>
           <div class="menu">
             <i class="material-icons">wifi_tethering</i>Radio
@@ -43,9 +43,43 @@
           </div>
         </div>
       </div>
-      <div class="column-two">Two</div>
+      <div class="column-two">
+        <div>
+          <div>Search</div>
+          <div>Home</div>
+        </div>
+        <div>
+          <div>Recently Played</div>
+          <div>
+            Four Things
+          </div>
+        </div>
+        <div>
+          <div>Popular playlist</div>
+          <div>Four things</div>
+        </div>
+      </div>
       <div class="column-three">Three</div>
     </main>
-    <footer><div>One</div></footer>
+    <footer>
+      <div class="song-playing">One</div>
+      <div class="listen-controls">
+        <div class="controls">
+          <i class="material-icons selected">shuffle</i>
+          <i class="material-icons">skip_previous</i>
+          <i class="material-icons">pause_circle_outline</i>
+          <i class="material-icons">skip_next</i>
+          <i class="material-icons selected">loop</i>
+        </div>
+        <div class="progress">
+          <span
+            >12:12
+            <div class="play-length"></div>
+            12:12</span
+          >
+        </div>
+      </div>
+      <div class="settings">Three</div>
+    </footer>
   </body>
 </html>
