footer song details and controls

--- a/dailyui/spotify/index.html
+++ b/dailyui/spotify/index.html
@@ -62,7 +62,18 @@
       <div class="column-three">Three</div>
     </main>
     <footer>
-      <div class="song-playing">One</div>
+      <div class="song-playing">
+        <div class="author-image">
+          <img src="playing.jpg" />
+        </div>
+        <div class="author-details">
+          <div class="detail_one">
+            <p class="song">Crush</p>
+            <i class="material-icons">favorite_border</i>
+          </div>
+          <p class="author">David Archuleta</p>
+        </div>
+      </div>
       <div class="listen-controls">
         <div class="controls">
           <i class="material-icons selected">shuffle</i>
