finish footer and added find friends section

--- a/dailyui/spotify/index.html
+++ b/dailyui/spotify/index.html
@@ -59,7 +59,15 @@
           <div>Four things</div>
         </div>
       </div>
-      <div class="column-three">Three</div>
+      <div class="column-three">
+        <div>
+          <div class="friends-text">See What You Friends Are</div>
+          <div class="friends-playing">Playing</div>
+          <div class="friends-button">
+            <button>FIND FRIENDS</button>
+          </div>
+        </div>
+      </div>
     </main>
     <footer>
       <div class="song-playing">
@@ -90,7 +98,18 @@
           >
         </div>
       </div>
-      <div class="settings">Three</div>
+      <div class="settings">
+        <div class="settings-icons">
+          <i class="material-icons">queue_music</i>
+          <i class="material-icons">devices_other</i>
+          <i class="material-icons">volume_up</i>
+        </div>
+        <div class="sound-bar">
+          <div class="sound-container">
+            <div class="sound-level"></div>
+          </div>
+        </div>
+      </div>
     </footer>
   </body>
 </html>
