added searc bar and arrows

--- a/dailyui/spotify/index.html
+++ b/dailyui/spotify/index.html
@@ -45,7 +45,19 @@
       </div>
       <div class="column-two">
         <div>
-          <div>Search</div>
+          <div class="nav-bar">
+            <div class="search">
+              <div class="arrows">
+                <i class="material-icons">keyboard_arrow_left</i>
+                <i class="material-icons arrow">keyboard_arrow_right</i>
+              </div>
+              <div class="search-bar">
+                <i class="material-icons">search</i>
+                <input placeholder="Search" />
+              </div>
+            </div>
+            <div class="upgrade">upgrade and icon</div>
+          </div>
           <div>Home</div>
         </div>
         <div>
@@ -61,7 +73,7 @@
       </div>
       <div class="column-three">
         <div>
-          <div class="friends-text">See What You Friends Are</div>
+          <div class="friends-text">See What Your Friends Are</div>
           <div class="friends-playing">Playing</div>
           <div class="friends-button">
             <button>FIND FRIENDS</button>
