added 'navbar' and browse topics

--- a/dailyui/spotify/index.html
+++ b/dailyui/spotify/index.html
@@ -56,19 +56,35 @@
                 <input placeholder="Search" />
               </div>
             </div>
-            <div class="upgrade">upgrade and icon</div>
+            <div class="upgrade">
+              <button class="upgrade-button">UPGRADE</button>
+              <div class="profile-icon">
+                <i class="material-icons">person</i>gertiesheshe
+                <i class="material-icons">keyboard_arrow_down</i>
+              </div>
+            </div>
           </div>
-          <div>Home</div>
-        </div>
-        <div>
-          <div>Recently Played</div>
-          <div>
-            Four Things
+          <div class="main-header-content">
+            <div class="Browse">
+              Browse
+            </div>
+            <div class="genre-selection">
+              <div class="genres">
+                GENRES & MOODS
+                <div class="selected-genre"></div>
+              </div>
+              <div class="genres">PODCASTS</div>
+              <div class="genres">CHARTS</div>
+              <div class="genres">NEW RELEASES</div>
+              <div class="genres">DISCOVER</div>
+              <div class="genres">CONCERTS</div>
+            </div>
           </div>
         </div>
-        <div>
-          <div>Popular playlist</div>
-          <div>Four things</div>
+        <div class="body-background">
+          <div class="body-content">
+            <div class="selected-title">Genres & Moods</div>
+          </div>
         </div>
       </div>
       <div class="column-three">
