change text formatting and move scrolling to div

--- a/dailyui/spotify/index.html
+++ b/dailyui/spotify/index.html
@@ -15,8 +15,10 @@
     <main>
       <div class="column-one">
         <div class="sidebar-content">
-          <div class="menu home"><i class="material-icons">home</i>Home</div>
-          <div class="menu"><i class="material-icons">laptop_mac</i>Browse</div>
+          <div class="menu"><i class="material-icons">home</i>Home</div>
+          <div class="menu browse-selected">
+            <i class="material-icons">laptop_mac</i>Browse
+          </div>
           <div class="menu">
             <i class="material-icons">wifi_tethering</i>Radio
           </div>
@@ -89,8 +91,10 @@
       </div>
       <div class="column-three">
         <div>
-          <div class="friends-text">See What Your Friends Are</div>
-          <div class="friends-playing">Playing</div>
+          <div class="friends-text">
+            See What Your Friends Are Playing.
+          </div>
+
           <div class="friends-button">
             <button>FIND FRIENDS</button>
           </div>
