add album photos and icons

--- a/dailyui/spotify/index.html
+++ b/dailyui/spotify/index.html
@@ -86,6 +86,80 @@
         <div class="body-background">
           <div class="body-content">
             <div class="selected-title">Genres & Moods</div>
+            <div class="genre-moods-selections">
+              <div class="genre-and-mood">
+                <div class="genre-icon">
+                  <div>
+                    <i class="material-icons">audiotrack</i></br>
+                    <p>Pop</p>
+                  </div>
+                </div>
+                <img src="album photos/pop.jpeg" />
+              </div>
+              <div class="genre-and-mood">
+                <div class="genre-icon">
+                    <div>
+                      <i class="material-icons">whatshot</i></br>
+                      <p>Gym</p>
+                    </div>
+                  </div>
+                <img src="album photos/workout.jpeg" />
+              </div>
+              <div class="genre-and-mood">
+                <div class="genre-icon">
+                    <div>
+                      <i class="material-icons">queue_music</i></br>
+                      <p>Hip</p>
+                    </div>
+                  </div>
+                <img src="album photos/hiphop.jpeg" />
+              </div>
+              <div class="genre-and-mood">
+                <div class="genre-icon">
+                    <div>
+                      <i class="material-icons">album</i></br>
+                      <p>Rock</p>
+                    </div>
+                  </div>
+                <img src="album photos/rock.jpeg" />
+              </div>
+              <div class="genre-and-mood">
+                <div class="genre-icon">
+                    <div>
+                      <i class="material-icons">eco</i></br>
+                      <p>Chill</p>
+                    </div>
+                  </div>
+                <img src="album photos/chill.jpeg" />
+              </div>
+              <div class="genre-and-mood">
+                <div class="genre-icon">
+                    <div>
+                      <i class="material-icons">donut_small</i></br>
+                      <p>#TBT</p>
+                    </div>
+                  </div>
+                <img src="album photos/throwback.jpeg" />
+              </div>
+              <div class="genre-and-mood">
+                <div class="genre-icon">
+                    <div>
+                      <i class="material-icons">volume_off</i></br>
+                      <p>Sleep</p>
+                    </div>
+                  </div>
+                <img src="album photos/sleep.jpeg" />
+              </div>
+              <div class="genre-and-mood">
+                <div class="genre-icon">
+                    <div>
+                      <i class="material-icons">favorite</i></br>
+                      <p>RnB</p>
+                    </div>
+                  </div>
+                <img src="album photos/rnb.jpeg" />
+              </div>
+            </div>
           </div>
         </div>
       </div>
