--- a/dailyui/spotify/index.html
+++ b/dailyui/spotify/index.html
@@ -94,7 +94,7 @@
                     <p>Pop</p>
                   </div>
                 </div>
-                <img src="album photos/pop.jpeg" />
+                <img src="album-photos/pop.jpeg" />
               </div>
               <div class="genre-and-mood">
                 <div class="genre-icon">
@@ -103,7 +103,7 @@
                       <p>Gym</p>
                     </div>
                   </div>
-                <img src="album photos/workout.jpeg" />
+                <img src="album-photos/workout.jpeg" />
               </div>
               <div class="genre-and-mood">
                 <div class="genre-icon">
@@ -112,7 +112,7 @@
                       <p>Hip</p>
                     </div>
                   </div>
-                <img src="album photos/hiphop.jpeg" />
+                <img src="album-photos/hiphop.jpeg" />
               </div>
               <div class="genre-and-mood">
                 <div class="genre-icon">
@@ -121,7 +121,7 @@
                       <p>Rock</p>
                     </div>
                   </div>
-                <img src="album photos/rock.jpeg" />
+                <img src="album-photos/rock.jpeg" />
               </div>
               <div class="genre-and-mood">
                 <div class="genre-icon">
@@ -130,7 +130,7 @@
                       <p>Chill</p>
                     </div>
                   </div>
-                <img src="album photos/chill.jpeg" />
+                <img src="album-photos/chill.jpeg" />
               </div>
               <div class="genre-and-mood">
                 <div class="genre-icon">
@@ -139,7 +139,7 @@
                       <p>#TBT</p>
                     </div>
                   </div>
-                <img src="album photos/throwback.jpeg" />
+                <img src="album-photos/throwback.jpeg" />
               </div>
               <div class="genre-and-mood">
                 <div class="genre-icon">
@@ -148,7 +148,7 @@
                       <p>Sleep</p>
                     </div>
                   </div>
-                <img src="album photos/sleep.jpeg" />
+                <img src="album-photos/sleep.jpeg" />
               </div>
               <div class="genre-and-mood">
                 <div class="genre-icon">
@@ -157,7 +157,7 @@
                       <p>RnB</p>
                     </div>
                   </div>
-                <img src="album photos/rnb.jpeg" />
+                <img src="album-photos/rnb.jpeg" />
               </div>
             </div>
           </div>
