add material icon and style side bar

--- a/dailyui/twitter/index.html
+++ b/dailyui/twitter/index.html
@@ -2,6 +2,8 @@
   <head>
     <title>Home/Twitter</title>
     <link rel="stylesheet" href="styles.css" />
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
   </head>
   <body>
     <div class="column-one">
@@ -9,25 +11,32 @@
         <img src="assets/twitter logo.png" />
       </div>
       <div class="menu-item">
-        <div>Home</div>
+        <i class="material-icons">home</i>
+        <div class="menu-item-text">Home</div>
       </div>
       <div class="menu-item">
-        <div>Explore</div>
+        <i class="material-icons">bookmarks</i>
+        <div class="menu-item-text">Explore</div>
       </div>
       <div class="menu-item">
-        <div>Notifications</div>
+        <i class="material-icons">notifications_none</i>
+        <div class="menu-item-text">Notifications</div>
       </div>
       <div class="menu-item">
-        <div>Bookmarks</div>
+        <i class="material-icons">turned_in_not</i>
+        <div class="menu-item-text">Bookmarks</div>
       </div>
       <div class="menu-item">
-        <div>List</div>
+        <i class="material-icons">article</i>
+        <div class="menu-item-text">Lists</div>
       </div>
       <div class="menu-item">
-        <div>Profile</div>
+        <i class="material-icons">perm_identity</i>
+        <div class="menu-item-text">Profile</div>
       </div>
       <div class="menu-item">
-        <div>More</div>
+        <i class="material-icons">pending</i>
+        <div class="menu-item-text">More</div>
       </div>
     </div>
     <div class="column-two">Two</div>
