finished side bar

--- a/dailyui/twitter/index.html
+++ b/dailyui/twitter/index.html
@@ -38,6 +38,21 @@
         <i class="material-icons">pending</i>
         <div class="menu-item-text">More</div>
       </div>
+      <div class="tweet-button">
+        <p class="tweet-button-text">Tweet</p>
+      </div>
+      <div class="menu-profile">
+        <div class="menu-profile-photo">
+          <img src="assets/Gertrude.jpg">
+        </div>
+        <div class="menu-profile-data">
+          <div class="menu-profile-name">Architect's daughter</div>
+          <div class="menu-profile-handle">@gertiesheshe</div>
+        </div>
+        <div class="menu-profile-more">
+          <i class="material-icons">keyboard_arrow_down</i>
+        </div>
+      </div>
     </div>
     <div class="column-two">Two</div>
     <div class="column-three">Three</div>
