add more changes to profile page

--- a/dailyui/twitter/index.html
+++ b/dailyui/twitter/index.html
@@ -54,7 +54,49 @@
         </div>
       </div>
     </div>
-    <div class="column-two">Two</div>
+    <div class="column-two">
+      <div class="profile-header">
+        <i class="material-icons profile-back">arrow_back</i>
+        <div>
+          <p class="username-text">Architect's daughter</p>
+          <p class="total-tweets">15.7K Tweets</p>
+        </div>
+      </div>
+      <div class="header-photo">
+        <img class="profile-user-photo" src="assets/Gertrude.jpg">
+      </div>
+      <button class="edit-button">Edit Profile</button>
+      <div class="user-details">
+        <p class="profile-username">Architect's daughter</p>
+        <p class="profile-handle">@gertiesheshe</p>
+      </div>
+      <div class="bio-description">
+        <span>Believer in Christ. Disciple. S/W Engineer. JavaScript. Accessibility. DevC Eldoret Lead. VR Enthusiast.</span>
+      </div>
+
+      <!-- <div class="home-section">
+        <p class="home-text">Home</p>
+        <i class="material-icons home-star">star_outline</i>
+      </div>
+      <div class="my-tweet">
+        <div class="whats-happening">
+          <img src="assets/Gertrude.jpg"> 
+          <p class="tweet-text">What's happening?</p>
+        </div>
+        <div class="tweet-icons">
+          <div>
+            <i class="material-icons tweet-icon">insert_photo</i>
+            <i class="material-icons tweet-icon">gif</i>
+            <i class="material-icons tweet-icon">equalizer</i>
+            <i class="material-icons tweet-icon">sentiment_satisfied</i>
+            <i class="material-icons tweet-icon">calendar_today</i>
+          </div>
+          <div>
+            <button class="my-tweet-button">Tweet</button>
+          </div>
+        </div>
+      </div> -->
+    </div>
     <div class="column-three">Three</div>
   </body>
 </html>
