finish twitter design

--- a/dailyui/twitter/index.html
+++ b/dailyui/twitter/index.html
@@ -62,41 +62,123 @@
           <p class="total-tweets">15.7K Tweets</p>
         </div>
       </div>
-      <div class="header-photo">
-        <img class="profile-user-photo" src="assets/Gertrude.jpg">
-      </div>
-      <button class="edit-button">Edit Profile</button>
-      <div class="user-details">
-        <p class="profile-username">Architect's daughter</p>
-        <p class="profile-handle">@gertiesheshe</p>
-      </div>
-      <div class="bio-description">
-        <span>Believer in Christ. Disciple. S/W Engineer. JavaScript. Accessibility. DevC Eldoret Lead. VR Enthusiast.</span>
-      </div>
-
-      <!-- <div class="home-section">
-        <p class="home-text">Home</p>
-        <i class="material-icons home-star">star_outline</i>
-      </div>
-      <div class="my-tweet">
-        <div class="whats-happening">
-          <img src="assets/Gertrude.jpg"> 
-          <p class="tweet-text">What's happening?</p>
+      <div class="scrollable">
+        <div class="header-photo">
+          <img class="profile-user-photo" src="assets/Gertrude.jpg">
         </div>
-        <div class="tweet-icons">
+        <button class="edit-button">Edit Profile</button>
+        <div class="user-details">
+          <p class="profile-username">Architect's daughter</p>
+          <p class="profile-handle">@gertiesheshe</p>
+        </div>
+        <div class="bio-description">
+          <span>Believer in Christ. Disciple. S/W Engineer. JavaScript. Accessibility. DevC Eldoret Lead. VR Enthusiast. Kenyan.</span>
+        </div>
+        <div class="metadata">
           <div>
-            <i class="material-icons tweet-icon">insert_photo</i>
-            <i class="material-icons tweet-icon">gif</i>
-            <i class="material-icons tweet-icon">equalizer</i>
-            <i class="material-icons tweet-icon">sentiment_satisfied</i>
-            <i class="material-icons tweet-icon">calendar_today</i>
+            <i class="material-icons metadata-icon">location_on</i>
+            <span class="metadata-text">Everywhere</span>
           </div>
           <div>
-            <button class="my-tweet-button">Tweet</button>
+            <i class="material-icons metadata-icon">link</i>
+            <span class="metadata-text metadata-link">youtube.com/c/TwitterUser</span>
+          </div>
+          <div>
+            <i class="material-icons metadata-icon">event_note</i>
+            <span class="metadata-text">Joined May 2050</span>
           </div>
         </div>
-      </div> -->
+        <div class="followers-data">
+          <div class="followers-text">
+            <span class="bold-number">583</span>Following</div>
+          <div class="followers-text">
+            <span class="bold-number">1,419</span>Followers</div>
+        </div>
+        <div class="tweets-and-replies">
+          <div class="text-tweet tweet-text-style">Tweets</div>
+          <div class="tweet-text-style">Tweets & Replies</div>
+          <div class="tweet-text-style">Media</div>
+          <div class="tweet-text-style">Likes</div>
+        </div>
+        <div class="pinned-tweet">
+          <i class="material-icons pinned-icon">push_pin</i>
+          <span class="tweet-pinned">Pinned Tweet</span>
+        </div>
+        <div class="pinned-tweet-details">
+          <img class="pinned-image" src="assets/Gertrude.jpg">
+          <div class="pinned-tweet-text">
+            <span class="pinned-user">Architect's daughter</span>
+            <span>@gertiesheshe .</span>
+            <span>Nov 11 2019</span>
+            <i class="material-icons pinned-icon arrow-down">keyboard_arrow_down</i>
+            <p class="pinned-main">Really honoured to be considered as one of those women :)</p>
+          </div> 
+        </div>
+        <div class="tweet-image">
+        </div>
+      </div> 
     </div>
-    <div class="column-three">Three</div>
+    <div class="column-three">
+      <div class="search-twitter">
+        <i class="material-icons search-icon">search</i>
+        <span class="search-text">Search Twitter</span>
+      </div>
+      <div class="scrollable">
+        <div class="image-gallery">
+          <div class="image tchalla"></div>
+          <div class="image mbaku"></div>
+          <div class="image killmonger"></div>
+          <div class="image nakia"></div>
+          <div class="image shuri"></div>
+          <div class="image okoye"></div> 
+        </div>
+        <div class="recommendation">
+          <div class="you-like">
+            <p class="you-like-text">You might like</p>
+          </div>
+          <div class="user-rec">
+            <img src="assets/tchalla.jpg">
+            <div class="user-rec-details">
+              <div>
+                <p class="user-rec-username">Black Panther</p>
+                <p class="user-rec-handle">@tchalla</p>
+              </div>
+              <button class="button-tchalla">Follow</button>
+            </div>
+          </div>
+          <div class="user-rec">
+            <img src="assets/nakia.jpeg">
+            <div class="user-rec-details">
+              <div>
+                <p class="user-rec-username">Nakia</p>
+                <p class="user-rec-handle">@nakia</p>
+              </div>
+              <button class="button-nakia">Follow</button>
+            </div>
+          </div>
+          <div class="user-rec">
+            <img src="assets/killmonger.jpg">
+            <div class="user-rec-details"> 
+              <div>
+                <p class="user-rec-username">Erik Killmonger</p>
+                <p class="user-rec-handle">@killmonger</p>
+              </div>
+              <button class="button-kill">Follow</button>
+            </div>
+          </div>
+          <p class="show-more">Show more</p>
+        </div>
+        <div class="trends">
+          <div class="you-like">
+            <p class="you-like-text">Trends for you</p>
+          </div>
+          <div class="trending">
+            <p class="trend-text">Trending in World</p>
+            <p class="trend-tag">#BlackLivesMatter</p>
+            <p class="trend-number">7 billion Tweets</p>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
